beautifulmind/static/css/global.css
body {
  padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
}

#forkme-ribbon {
    z-index: 1000;
    position: absolute;
    top: 41px;
    left: 0;
    border: 0;
}

.brand-dot {
    color: #4183c4;
}

.navbar .navbar-label-container {
    padding-top: 13px;
}

#component-tpl {
    display: None;
}

